--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 [database]
-DBhost = "esotemp.vse.cz"
-DBuser = "jarm12"
-DBpass = "thohChaiW9Ke9iej7e"
+DBhost = "10.10.0.10:3307"
+DBname = "php_adventura"
+DBuser = "php_adventura"
+DBpass = "Guwajip=71"
